--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                              data-aos-once="true">
                             <p>Hecate</p>
                             <h2>
-                                <a href="https://mailchimp.com/about/mcsv-static">LABS</a>
+                                <a href="https://github.com/HecateGames">LABS</a>
                             </h2>
                         </div>
                     </div>
@@ -271,18 +271,18 @@
                             </ul>
                             <ul class="list-inline social-icons">
                                 <li class="list-inline-item">
-                                    <a href="https://www.facebook.com/damien.stamates" target="_blank" class="btn btn-icon">
-                                        <img class="mdi mdi-18px" src="images/ic_facebook.svg">
+                                    <a href="https://www.facebook.com/" target="_blank" class="btn btn-icon">
+                                        <img class="mdi mdi-18px" src="/images/ic_facebook.svg">
                                     </a>
                                 </li>
                                 <li class="list-inline-item">
-                                    <a href="https://twitter.com/Damienfamed75" target="_blank" class="btn btn-icon">
-                                        <img class="mdi mdi-18px" src="images/ic_twitter.svg">
+                                    <a href="https://twitter.com/" target="_blank" class="btn btn-icon">
+                                        <img class="mdi mdi-18px" src="/images/ic_twitter.svg">
                                     </a>
                                 </li>
                                 <li class="list-inline-item">
-                                    <a href="https://www.linkedin.com/in/damien-stamates-a3068212a/" target="_blank" class="btn btn-icon">
-                                        <img class="mdi mdi-18px" src="images/ic_linkedin.svg">
+                                    <a href="https://www.linkedin.com/" target="_blank" class="btn btn-icon">
+                                        <img class="mdi mdi-18px" src="/images/ic_linkedin.svg">
                                     </a>
                                 </li>
                             </ul>
@@ -320,7 +320,7 @@
                                 </li>
                                 <li class="list-inline-item">
                                     <p>
-                                        <small class="alpha-4">CONTACT@HECATEGAMES.COM</small>
+                                        <small class="alpha-4">DAMIEN@HECATEGAMES.COM - VOID@HECATEGAMES.COM</small>
                                     </p>
                                 </li>
                             </ul>
@@ -359,7 +359,7 @@
                                 </a>
                             </div>
                             <div class="bg_secundary_blue">
-                                <a href="https://mailchimp.com/about/mcsv-static">
+                                <a href="https://github.com/HecateGames/">
                                     <div class="hecate-section hecate-labs-bg">
                                         <div class="container">
                                             <div>
@@ -377,16 +377,17 @@
                                             <div class="col-md-2 offset-md-3 col-sm-4 col-4 text-left">
                                                 <p class="first-options">
                                                     <a href="#" data-toggle="modal" data-target="#responsiveMenu">
-                                                        <img class="mdi mdi-18px" src="https://hecate.co/images/icons/ic_close_white_24px.svg"> CLOSE
+                                                        <img class="mdi mdi-18px" src="/images/ic_close_white_24px.svg"> CLOSE
                                                     </a>
                                                 </p>
                                             </div>
-                                            <!--
-                                            <div class="col-md-2 col-sm-4 col-4 text-center">
+                                            
+                                            <!--<div class="col-md-2 col-sm-4 col-4 text-center">
                                                 <p>
                                                     <a href="/about">ABOUT US</a>
                                                 </p>
                                             </div>-->
+
                                             <div class="col-md-2 col-sm-4 col-4 text-right">
                                                 <p>
                                                     <a href="#" class="go-contact-modal" data-contact-type="enterprise">CONTACT</a>
@@ -413,7 +414,7 @@
                         <a href="#" data-toggle="modal" data-target="#contacthecate">
                             <small class="visible-sm">
                                 CLOSE
-                                <img class="mdi mdi-18px" src="https://hecate.co/images/icons/ic_close_white_24px.svg">
+                                <img class="mdi mdi-18px" src="/images/ic_close_white_24px.svg">
                             </small>
                             <small class="hidden-sm">
                                 <span class="alpha-4">PRESS 'ESC' OR</span> CLOSE
@@ -518,7 +519,7 @@
                                         We already have your message in our Inbox. We will get back to you as soon as possible!
                                         :)
                                     </p>
-                                    <a id="thanksCloseBtn" href="#" class="btn" href="#" data-toggle="modal" data-target="#contacthecate">CLOSING IN 6 ...</a>
+                                    <a id="thanksCloseBtn" href="#" class="btn" data-toggle="modal" data-target="#contacthecate">CLOSING IN 6 ...</a>
                                 </div>
                             </div>
                         </div>
